fixing animation issues on iOS Chrome

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,7 @@
 @-webkit-keyframes animate {
   0% {
     opacity: 0;
+    -webkit-transform: rotate(45deg) translate(-20px, -20px);
     transform: rotate(45deg) translate(-20px, -20px);
   }
   50% {
@@ -8,6 +9,7 @@
   }
   100% {
     opacity: 0;
+    -webkit-transform: rotate(45deg) translate(20px, 20px);
     transform: rotate(45deg) translate(20px, 20px);
   }
 }
